--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,18 +26,10 @@ jobs:
           override: true
           components: rustfmt, clippy
     - name: Run cargo fmt
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt -- --check
+      run: cargo fmt -- --check
     - name: Run cargo build
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
+      run: cargo build
     - name: Run cargo clippy
-      uses: actions-rs/cargo@v1
-      with:
-        command: clippy
+      run: cargo clippy
     - name: Run cargo test
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
+      run: cargo test
