--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,9 +26,23 @@ jobs:
           components: rustfmt, clippy
     - name: Run cargo fmt
       run: cargo fmt -- --check
+    - uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
     - name: Run cargo build
       run: cargo build
-    - name: Run cargo clippy
-      run: cargo clippy
     - name: Run cargo test
       run: cargo test
+    - name: Run cargo clean
+      run: cargo clean
+    - name: Run cargo test
+      env:
+        RUSTFLAGS: '-Z instrument-coverage'
+      run: cargo test
+    - uses: actions-rs/grcov@v0.1
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ${{ steps.coverage.outputs.report }}
