--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 nom = "7"
 chrono = "0.4"
+arbitrary = { version = "1", optional = true, features = ["derive"] }
+
+[features]
+#default = ["arbitrary"] # only uncomment if needed - seems to break code coverage
