--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,26 +44,21 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-features
-    - name: Run cargo build
-      run: cargo build
-    - name: Run cargo test
-      run: cargo test
-    - name: Run cargo clean
-      run: cargo clean
-    - name: Run cargo test
+    - name: cargo build test
+      id: build-test
       env:
         RUSTFLAGS: '-Z instrument-coverage'
-      run: cargo test
+      run: echo "::set-output name=binary::$(cargo test --no-run --message-format=json | jq -r "select(.profile.test == true) | .filenames[]")"
+    - name: cargo test
+      run: ${{ steps.build-test.outputs.binary }}
     - name: cargo profdata
       run: cargo profdata -- merge -sparse default.profraw -o default.profdata
-    - name: clean
-      run: rm target/debug/deps/*.d
     - name: coverage
-      run: cargo cov -- show --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-* --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
+      run: cargo cov -- show --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: coverage summary
-      run: cargo cov -- report --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-*
+      run: cargo cov -- report --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }}
     - name: coverage html
-      run: cargo cov -- show --format=html --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-* --output-dir=target/debug/coverage --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
+      run: cargo cov -- show --format=html --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --output-dir=target/debug/coverage --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: Archive code coverage results
       uses: actions/upload-artifact@v2
       with:
