--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,7 +56,9 @@ jobs:
     - name: coverage
       run: cargo cov -- show --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: coverage summary
-      run: cargo cov -- report --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }}
+      id: coverage
+      # https://docs.github.com/en/actions/learn-github-actions/workflow-commands-for-github-actions
+      run: echo "::set-output name=summary::$(cargo cov -- report --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }})"
     - name: coverage html
       run: cargo cov -- show --format=html --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --output-dir=target/debug/coverage --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: Archive code coverage results
@@ -64,3 +66,18 @@ jobs:
       with:
         name: coverage
         path: target/debug/coverage
+    - uses: actions/github-script@v5
+      env:
+        COVERAGE_SUMMARY: ${{ steps.coverage.outputs.summary }}
+      with:
+        script: |
+          const { COVERAGE_SUMMARY } = process.env
+
+          console.log(`${COVERAGE_SUMMARY}`)
+
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: `${COVERAGE_SUMMARY}`
+          })
