--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,3 +85,11 @@ jobs:
             repo: context.repo.repo,
             body: "```\n" + data + "```"
           })
+
+          await github.checks.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            name: "Changes detected",
+            head_sha: context.sha,
+            conclusion: "action_required",
+          }) 
