--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,28 +44,54 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-features
-    - name: Run cargo build
-      run: cargo build
-    - name: Run cargo test
-      run: cargo test
-    - name: Run cargo clean
-      run: cargo clean
-    - name: Run cargo test
+    - name: cargo build test
+      id: build-test
       env:
         RUSTFLAGS: '-Z instrument-coverage'
-      run: cargo test
+      run: echo "::set-output name=binary::$(cargo test --no-run --message-format=json | jq -r "select(.profile.test == true) | .filenames[]")"
+    - name: cargo test
+      run: ${{ steps.build-test.outputs.binary }}
     - name: cargo profdata
       run: cargo profdata -- merge -sparse default.profraw -o default.profdata
-    - name: clean
-      run: rm target/debug/deps/*.d
     - name: coverage
-      run: cargo cov -- show --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-* --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
+      run: cargo cov -- show --ignore-filename-regex='(/.cargo/registry)|(/rustc/)' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: coverage summary
-      run: cargo cov -- report --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-*
+      id: coverage
+      # https://docs.github.com/en/actions/learn-github-actions/workflow-commands-for-github-actions
+      run: cargo cov -- report --ignore-filename-regex='(/.cargo/registry)|(/rustc/)' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} > coverage-result.txt
     - name: coverage html
-      run: cargo cov -- show --format=html --use-color --ignore-filename-regex='/.cargo/registry' --instr-profile=default.profdata --object target/debug/deps/ical_rrule-* --output-dir=target/debug/coverage --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
+      run: cargo cov -- show --format=html --ignore-filename-regex='(/.cargo/registry)|(/rustc/)' --instr-profile=default.profdata --object ${{ steps.build-test.outputs.binary }} --output-dir=target/debug/coverage --show-instantiations --show-line-counts-or-regions --Xdemangler=rustfilt
     - name: Archive code coverage results
       uses: actions/upload-artifact@v2
       with:
         name: coverage
         path: target/debug/coverage
+    - uses: actions/github-script@v5
+      # https://github.com/actions/github-script
+      # https://docs.github.com/en/actions/learn-github-actions/contexts
+      #env:
+      #  COVERAGE_SUMMARY: ${{ steps.coverage.outputs.summary }}
+      # CANT USE CHECKS API as this is not a Github App (which we could probably easily create)
+      with:
+        script: |
+          const fs = require('fs')
+          //const { COVERAGE_SUMMARY } = process.env
+          const data = fs.readFileSync('coverage-result.txt', 'utf8')
+
+          //console.log(`${COVERAGE_SUMMARY}`)
+
+          console.log(await github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: "```\n" + data + "```"
+          }))
+          /*
+          console.log(await github.rest.repos.createCommitStatus({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            name: "Changes detected",
+            sha: context.sha,
+            state: 'success',
+          }))
+          */
