--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 nom = "7"
 chrono = "0.4"
-arbitrary = { version = "1", optional = true, features = ["derive"] }
 rand = "0.8"
+arbitrary = { version = "1", optional = true, features = ["derive"] }
+
+[dev-dependencies]
+insta = "1.8.0"
 
 [features]
-default = ["arbitrary"] # only uncomment if needed - seems to break code coverage
+default = [] # only uncomment if needed - seems to break code coverage
