First bug: off by one for dates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 nom = "7"
 chrono = "0.4"
+chrono-tz = "0.6"
 rand = "0.8"
 arbitrary = { version = "1", optional = true, features = ["derive"] }
 
